sintactico/sintatic.output
Terminals unused in grammar

    ELE
    CADENA
    OTRO
    SPACE


Grammar

    0 $accept: program $end

    1 program: PROGRAM LI list-decl list-sent LD

    2 list-decl: ε
    3          | list-decl decl

    4 decl: tipo list-id PYC

    5 tipo: INT
    6     | FLOAT
    7     | BOOL

    8 list-id: list-id COM IDENTIFICADOR
    9        | IDENTIFICADOR

   10 list-sent: ε
   11          | list-sent sent

   12 sent: sent-if
   13     | sent-while
   14     | sent-do
   15     | sent-read
   16     | sent-write
   17     | bloque
   18     | sent-assign
   19     | BREAK

   20 sent-if: IF PI exp-bool PD THEN bloque FI
   21        | IF PI exp-bool PD THEN bloque ELSE bloque FI

   22 sent-while: WHILE PI exp-bool PD bloque

   23 sent-do: DO bloque UNTIL PI exp-bool PD PYC

   24 sent-read: READ IDENTIFICADOR PYC

   25 sent-write: WRITE IDENTIFICADOR PYC

   26 bloque: LI list-sent LD

   27 sent-assign: IDENTIFICADOR ASIG exp-bool PYC

   28 exp-bool: exp-bool OR comb
   29         | comb

   30 comb: comb AND igualdad
   31     | igualdad

   32 igualdad: igualdad IGU rel
   33         | igualdad DIS rel
   34         | rel

   35 rel: expr op-rel expr
   36    | expr

   37 op-rel: MEN
   38       | MENIGL
   39       | MAY
   40       | MAYIGL

   41 expr: expr RES term
   42     | expr MAS term
   43     | term

   44 term: term MUL unario
   45     | term DIV unario
   46     | unario

   47 unario: NOT unario
   48       | RES unario
   49       | factor

   50 factor: PI exp-bool PD
   51       | IDENTIFICADOR
   52       | NUMERO
   53       | TRUE
   54       | FALSE


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    PROGRAM <program> (258) 1
    IF <i> (259) 20 21
    THEN <then> (260) 20 21
    ELSE <els> (261) 21
    FI <fi> (262) 20 21
    DO <d> (263) 23
    UNTIL <until> (264) 23
    WHILE <whil> (265) 22
    BREAK <brea> (266) 19
    READ <read> (267) 24
    WRITE <write> (268) 25
    FLOAT <floa> (269) 6
    INT <in> (270) 5
    BOOL <boo> (271) 7
    NOT <no> (272) 47
    AND <an> (273) 30
    OR <o> (274) 28
    TRUE <tru> (275) 53
    FALSE <fals> (276) 54
    MAS <mas> (277) 42
    RES <res> (278) 41 48
    MUL <mul> (279) 44
    DIV <div> (280) 45
    ELE <ele> (281)
    MEN <men> (282) 37
    MENIGL <menigl> (283) 38
    MAY <may> (284) 39
    MAYIGL <mayigl> (285) 40
    IGU <igu> (286) 32
    DIS <dis> (287) 33
    ASIG <asig> (288) 27
    PYC <pyc> (289) 4 23 24 25 27
    COM <com> (290) 8
    PI <pi> (291) 20 21 22 23 50
    PD <pd> (292) 20 21 22 23 50
    LI <li> (293) 1 26
    LD <ld> (294) 1 26
    CADENA <cadena> (295)
    NUMERO <numero> (296) 52
    IDENTIFICADOR <identificador> (297) 8 9 24 25 27 51
    OTRO (298)
    SPACE <space> (299)


Nonterminals, with rules where they appear

    $accept (45)
        on left: 0
    program (46)
        on left: 1
        on right: 0
    list-decl (47)
        on left: 2 3
        on right: 1 3
    decl (48)
        on left: 4
        on right: 3
    tipo (49)
        on left: 5 6 7
        on right: 4
    list-id (50)
        on left: 8 9
        on right: 4 8
    list-sent (51)
        on left: 10 11
        on right: 1 11 26
    sent (52)
        on left: 12 13 14 15 16 17 18 19
        on right: 11
    sent-if (53)
        on left: 20 21
        on right: 12
    sent-while (54)
        on left: 22
        on right: 13
    sent-do (55)
        on left: 23
        on right: 14
    sent-read (56)
        on left: 24
        on right: 15
    sent-write (57)
        on left: 25
        on right: 16
    bloque (58)
        on left: 26
        on right: 17 20 21 22 23
    sent-assign (59)
        on left: 27
        on right: 18
    exp-bool (60)
        on left: 28 29
        on right: 20 21 22 23 27 28 50
    comb (61)
        on left: 30 31
        on right: 28 29 30
    igualdad (62)
        on left: 32 33 34
        on right: 30 31 32 33
    rel (63)
        on left: 35 36
        on right: 32 33 34
    op-rel (64)
        on left: 37 38 39 40
        on right: 35
    expr (65)
        on left: 41 42 43
        on right: 35 36 41 42
    term (66)
        on left: 44 45 46
        on right: 41 42 43 44 45
    unario (67)
        on left: 47 48 49
        on right: 44 45 46 47 48
    factor (68)
        on left: 50 51 52 53 54
        on right: 49


State 0

    0 $accept: • program $end

    PROGRAM  shift, and go to state 1

    program  go to state 2


State 1

    1 program: PROGRAM • LI list-decl list-sent LD

    LI  shift, and go to state 3


State 2

    0 $accept: program • $end

    $end  shift, and go to state 4


State 3

    1 program: PROGRAM LI • list-decl list-sent LD

    $default  reduce using rule 2 (list-decl)

    list-decl  go to state 5


State 4

    0 $accept: program $end •

    $default  accept


State 5

    1 program: PROGRAM LI list-decl • list-sent LD
    3 list-decl: list-decl • decl

    FLOAT  shift, and go to state 6
    INT    shift, and go to state 7
    BOOL   shift, and go to state 8

    $default  reduce using rule 10 (list-sent)

    decl       go to state 9
    tipo       go to state 10
    list-sent  go to state 11


State 6

    6 tipo: FLOAT •

    $default  reduce using rule 6 (tipo)


State 7

    5 tipo: INT •

    $default  reduce using rule 5 (tipo)


State 8

    7 tipo: BOOL •

    $default  reduce using rule 7 (tipo)


State 9

    3 list-decl: list-decl decl •

    $default  reduce using rule 3 (list-decl)


State 10

    4 decl: tipo • list-id PYC

    IDENTIFICADOR  shift, and go to state 12

    list-id  go to state 13


State 11

    1 program: PROGRAM LI list-decl list-sent • LD
   11 list-sent: list-sent • sent

    IF             shift, and go to state 14
    DO             shift, and go to state 15
    WHILE          shift, and go to state 16
    BREAK          shift, and go to state 17
    READ           shift, and go to state 18
    WRITE          shift, and go to state 19
    LI             shift, and go to state 20
    LD             shift, and go to state 21
    IDENTIFICADOR  shift, and go to state 22

    sent         go to state 23
    sent-if      go to state 24
    sent-while   go to state 25
    sent-do      go to state 26
    sent-read    go to state 27
    sent-write   go to state 28
    bloque       go to state 29
    sent-assign  go to state 30


State 12

    9 list-id: IDENTIFICADOR •

    $default  reduce using rule 9 (list-id)


State 13

    4 decl: tipo list-id • PYC
    8 list-id: list-id • COM IDENTIFICADOR

    PYC  shift, and go to state 31
    COM  shift, and go to state 32


State 14

   20 sent-if: IF • PI exp-bool PD THEN bloque FI
   21        | IF • PI exp-bool PD THEN bloque ELSE bloque FI

    PI  shift, and go to state 33


State 15

   23 sent-do: DO • bloque UNTIL PI exp-bool PD PYC

    LI  shift, and go to state 20

    bloque  go to state 34


State 16

   22 sent-while: WHILE • PI exp-bool PD bloque

    PI  shift, and go to state 35


State 17

   19 sent: BREAK •

    $default  reduce using rule 19 (sent)


State 18

   24 sent-read: READ • IDENTIFICADOR PYC

    IDENTIFICADOR  shift, and go to state 36


State 19

   25 sent-write: WRITE • IDENTIFICADOR PYC

    IDENTIFICADOR  shift, and go to state 37


State 20

   26 bloque: LI • list-sent LD

    $default  reduce using rule 10 (list-sent)

    list-sent  go to state 38


State 21

    1 program: PROGRAM LI list-decl list-sent LD •

    $default  reduce using rule 1 (program)


State 22

   27 sent-assign: IDENTIFICADOR • ASIG exp-bool PYC

    ASIG  shift, and go to state 39


State 23

   11 list-sent: list-sent sent •

    $default  reduce using rule 11 (list-sent)


State 24

   12 sent: sent-if •

    $default  reduce using rule 12 (sent)


State 25

   13 sent: sent-while •

    $default  reduce using rule 13 (sent)


State 26

   14 sent: sent-do •

    $default  reduce using rule 14 (sent)


State 27

   15 sent: sent-read •

    $default  reduce using rule 15 (sent)


State 28

   16 sent: sent-write •

    $default  reduce using rule 16 (sent)


State 29

   17 sent: bloque •

    $default  reduce using rule 17 (sent)


State 30

   18 sent: sent-assign •

    $default  reduce using rule 18 (sent)


State 31

    4 decl: tipo list-id PYC •

    $default  reduce using rule 4 (decl)


State 32

    8 list-id: list-id COM • IDENTIFICADOR

    IDENTIFICADOR  shift, and go to state 40


State 33

   20 sent-if: IF PI • exp-bool PD THEN bloque FI
   21        | IF PI • exp-bool PD THEN bloque ELSE bloque FI

    NOT            shift, and go to state 41
    TRUE           shift, and go to state 42
    FALSE          shift, and go to state 43
    RES            shift, and go to state 44
    PI             shift, and go to state 45
    NUMERO         shift, and go to state 46
    IDENTIFICADOR  shift, and go to state 47

    exp-bool  go to state 48
    comb      go to state 49
    igualdad  go to state 50
    rel       go to state 51
    expr      go to state 52
    term      go to state 53
    unario    go to state 54
    factor    go to state 55


State 34

   23 sent-do: DO bloque • UNTIL PI exp-bool PD PYC

    UNTIL  shift, and go to state 56


State 35

   22 sent-while: WHILE PI • exp-bool PD bloque

    NOT            shift, and go to state 41
    TRUE           shift, and go to state 42
    FALSE          shift, and go to state 43
    RES            shift, and go to state 44
    PI             shift, and go to state 45
    NUMERO         shift, and go to state 46
    IDENTIFICADOR  shift, and go to state 47

    exp-bool  go to state 57
    comb      go to state 49
    igualdad  go to state 50
    rel       go to state 51
    expr      go to state 52
    term      go to state 53
    unario    go to state 54
    factor    go to state 55


State 36

   24 sent-read: READ IDENTIFICADOR • PYC

    PYC  shift, and go to state 58


State 37

   25 sent-write: WRITE IDENTIFICADOR • PYC

    PYC  shift, and go to state 59


State 38

   11 list-sent: list-sent • sent
   26 bloque: LI list-sent • LD

    IF             shift, and go to state 14
    DO             shift, and go to state 15
    WHILE          shift, and go to state 16
    BREAK          shift, and go to state 17
    READ           shift, and go to state 18
    WRITE          shift, and go to state 19
    LI             shift, and go to state 20
    LD             shift, and go to state 60
    IDENTIFICADOR  shift, and go to state 22

    sent         go to state 23
    sent-if      go to state 24
    sent-while   go to state 25
    sent-do      go to state 26
    sent-read    go to state 27
    sent-write   go to state 28
    bloque       go to state 29
    sent-assign  go to state 30


State 39

   27 sent-assign: IDENTIFICADOR ASIG • exp-bool PYC

    NOT            shift, and go to state 41
    TRUE           shift, and go to state 42
    FALSE          shift, and go to state 43
    RES            shift, and go to state 44
    PI             shift, and go to state 45
    NUMERO         shift, and go to state 46
    IDENTIFICADOR  shift, and go to state 47

    exp-bool  go to state 61
    comb      go to state 49
    igualdad  go to state 50
    rel       go to state 51
    expr      go to state 52
    term      go to state 53
    unario    go to state 54
    factor    go to state 55


State 40

    8 list-id: list-id COM IDENTIFICADOR •

    $default  reduce using rule 8 (list-id)


State 41

   47 unario: NOT • unario

    NOT            shift, and go to state 41
    TRUE           shift, and go to state 42
    FALSE          shift, and go to state 43
    RES            shift, and go to state 44
    PI             shift, and go to state 45
    NUMERO         shift, and go to state 46
    IDENTIFICADOR  shift, and go to state 47

    unario  go to state 62
    factor  go to state 55


State 42

   53 factor: TRUE •

    $default  reduce using rule 53 (factor)


State 43

   54 factor: FALSE •

    $default  reduce using rule 54 (factor)


State 44

   48 unario: RES • unario

    NOT            shift, and go to state 41
    TRUE           shift, and go to state 42
    FALSE          shift, and go to state 43
    RES            shift, and go to state 44
    PI             shift, and go to state 45
    NUMERO         shift, and go to state 46
    IDENTIFICADOR  shift, and go to state 47

    unario  go to state 63
    factor  go to state 55


State 45

   50 factor: PI • exp-bool PD

    NOT            shift, and go to state 41
    TRUE           shift, and go to state 42
    FALSE          shift, and go to state 43
    RES            shift, and go to state 44
    PI             shift, and go to state 45
    NUMERO         shift, and go to state 46
    IDENTIFICADOR  shift, and go to state 47

    exp-bool  go to state 64
    comb      go to state 49
    igualdad  go to state 50
    rel       go to state 51
    expr      go to state 52
    term      go to state 53
    unario    go to state 54
    factor    go to state 55


State 46

   52 factor: NUMERO •

    $default  reduce using rule 52 (factor)


State 47

   51 factor: IDENTIFICADOR •

    $default  reduce using rule 51 (factor)


State 48

   20 sent-if: IF PI exp-bool • PD THEN bloque FI
   21        | IF PI exp-bool • PD THEN bloque ELSE bloque FI
   28 exp-bool: exp-bool • OR comb

    OR  shift, and go to state 65
    PD  shift, and go to state 66


State 49

   29 exp-bool: comb •
   30 comb: comb • AND igualdad

    AND  shift, and go to state 67

    $default  reduce using rule 29 (exp-bool)


State 50

   31 comb: igualdad •
   32 igualdad: igualdad • IGU rel
   33         | igualdad • DIS rel

    IGU  shift, and go to state 68
    DIS  shift, and go to state 69

    $default  reduce using rule 31 (comb)


State 51

   34 igualdad: rel •

    $default  reduce using rule 34 (igualdad)


State 52

   35 rel: expr • op-rel expr
   36    | expr •
   41 expr: expr • RES term
   42     | expr • MAS term

    MAS     shift, and go to state 70
    RES     shift, and go to state 71
    MEN     shift, and go to state 72
    MENIGL  shift, and go to state 73
    MAY     shift, and go to state 74
    MAYIGL  shift, and go to state 75

    $default  reduce using rule 36 (rel)

    op-rel  go to state 76


State 53

   43 expr: term •
   44 term: term • MUL unario
   45     | term • DIV unario

    MUL  shift, and go to state 77
    DIV  shift, and go to state 78

    $default  reduce using rule 43 (expr)


State 54

   46 term: unario •

    $default  reduce using rule 46 (term)


State 55

   49 unario: factor •

    $default  reduce using rule 49 (unario)


State 56

   23 sent-do: DO bloque UNTIL • PI exp-bool PD PYC

    PI  shift, and go to state 79


State 57

   22 sent-while: WHILE PI exp-bool • PD bloque
   28 exp-bool: exp-bool • OR comb

    OR  shift, and go to state 65
    PD  shift, and go to state 80


State 58

   24 sent-read: READ IDENTIFICADOR PYC •

    $default  reduce using rule 24 (sent-read)


State 59

   25 sent-write: WRITE IDENTIFICADOR PYC •

    $default  reduce using rule 25 (sent-write)


State 60

   26 bloque: LI list-sent LD •

    $default  reduce using rule 26 (bloque)


State 61

   27 sent-assign: IDENTIFICADOR ASIG exp-bool • PYC
   28 exp-bool: exp-bool • OR comb

    OR   shift, and go to state 65
    PYC  shift, and go to state 81


State 62

   47 unario: NOT unario •

    $default  reduce using rule 47 (unario)


State 63

   48 unario: RES unario •

    $default  reduce using rule 48 (unario)


State 64

   28 exp-bool: exp-bool • OR comb
   50 factor: PI exp-bool • PD

    OR  shift, and go to state 65
    PD  shift, and go to state 82


State 65

   28 exp-bool: exp-bool OR • comb

    NOT            shift, and go to state 41
    TRUE           shift, and go to state 42
    FALSE          shift, and go to state 43
    RES            shift, and go to state 44
    PI             shift, and go to state 45
    NUMERO         shift, and go to state 46
    IDENTIFICADOR  shift, and go to state 47

    comb      go to state 83
    igualdad  go to state 50
    rel       go to state 51
    expr      go to state 52
    term      go to state 53
    unario    go to state 54
    factor    go to state 55


State 66

   20 sent-if: IF PI exp-bool PD • THEN bloque FI
   21        | IF PI exp-bool PD • THEN bloque ELSE bloque FI

    THEN  shift, and go to state 84


State 67

   30 comb: comb AND • igualdad

    NOT            shift, and go to state 41
    TRUE           shift, and go to state 42
    FALSE          shift, and go to state 43
    RES            shift, and go to state 44
    PI             shift, and go to state 45
    NUMERO         shift, and go to state 46
    IDENTIFICADOR  shift, and go to state 47

    igualdad  go to state 85
    rel       go to state 51
    expr      go to state 52
    term      go to state 53
    unario    go to state 54
    factor    go to state 55


State 68

   32 igualdad: igualdad IGU • rel

    NOT            shift, and go to state 41
    TRUE           shift, and go to state 42
    FALSE          shift, and go to state 43
    RES            shift, and go to state 44
    PI             shift, and go to state 45
    NUMERO         shift, and go to state 46
    IDENTIFICADOR  shift, and go to state 47

    rel     go to state 86
    expr    go to state 52
    term    go to state 53
    unario  go to state 54
    factor  go to state 55


State 69

   33 igualdad: igualdad DIS • rel

    NOT            shift, and go to state 41
    TRUE           shift, and go to state 42
    FALSE          shift, and go to state 43
    RES            shift, and go to state 44
    PI             shift, and go to state 45
    NUMERO         shift, and go to state 46
    IDENTIFICADOR  shift, and go to state 47

    rel     go to state 87
    expr    go to state 52
    term    go to state 53
    unario  go to state 54
    factor  go to state 55


State 70

   42 expr: expr MAS • term

    NOT            shift, and go to state 41
    TRUE           shift, and go to state 42
    FALSE          shift, and go to state 43
    RES            shift, and go to state 44
    PI             shift, and go to state 45
    NUMERO         shift, and go to state 46
    IDENTIFICADOR  shift, and go to state 47

    term    go to state 88
    unario  go to state 54
    factor  go to state 55


State 71

   41 expr: expr RES • term

    NOT            shift, and go to state 41
    TRUE           shift, and go to state 42
    FALSE          shift, and go to state 43
    RES            shift, and go to state 44
    PI             shift, and go to state 45
    NUMERO         shift, and go to state 46
    IDENTIFICADOR  shift, and go to state 47

    term    go to state 89
    unario  go to state 54
    factor  go to state 55


State 72

   37 op-rel: MEN •

    $default  reduce using rule 37 (op-rel)


State 73

   38 op-rel: MENIGL •

    $default  reduce using rule 38 (op-rel)


State 74

   39 op-rel: MAY •

    $default  reduce using rule 39 (op-rel)


State 75

   40 op-rel: MAYIGL •

    $default  reduce using rule 40 (op-rel)


State 76

   35 rel: expr op-rel • expr

    NOT            shift, and go to state 41
    TRUE           shift, and go to state 42
    FALSE          shift, and go to state 43
    RES            shift, and go to state 44
    PI             shift, and go to state 45
    NUMERO         shift, and go to state 46
    IDENTIFICADOR  shift, and go to state 47

    expr    go to state 90
    term    go to state 53
    unario  go to state 54
    factor  go to state 55


State 77

   44 term: term MUL • unario

    NOT            shift, and go to state 41
    TRUE           shift, and go to state 42
    FALSE          shift, and go to state 43
    RES            shift, and go to state 44
    PI             shift, and go to state 45
    NUMERO         shift, and go to state 46
    IDENTIFICADOR  shift, and go to state 47

    unario  go to state 91
    factor  go to state 55


State 78

   45 term: term DIV • unario

    NOT            shift, and go to state 41
    TRUE           shift, and go to state 42
    FALSE          shift, and go to state 43
    RES            shift, and go to state 44
    PI             shift, and go to state 45
    NUMERO         shift, and go to state 46
    IDENTIFICADOR  shift, and go to state 47

    unario  go to state 92
    factor  go to state 55


State 79

   23 sent-do: DO bloque UNTIL PI • exp-bool PD PYC

    NOT            shift, and go to state 41
    TRUE           shift, and go to state 42
    FALSE          shift, and go to state 43
    RES            shift, and go to state 44
    PI             shift, and go to state 45
    NUMERO         shift, and go to state 46
    IDENTIFICADOR  shift, and go to state 47

    exp-bool  go to state 93
    comb      go to state 49
    igualdad  go to state 50
    rel       go to state 51
    expr      go to state 52
    term      go to state 53
    unario    go to state 54
    factor    go to state 55


State 80

   22 sent-while: WHILE PI exp-bool PD • bloque

    LI  shift, and go to state 20

    bloque  go to state 94


State 81

   27 sent-assign: IDENTIFICADOR ASIG exp-bool PYC •

    $default  reduce using rule 27 (sent-assign)


State 82

   50 factor: PI exp-bool PD •

    $default  reduce using rule 50 (factor)


State 83

   28 exp-bool: exp-bool OR comb •
   30 comb: comb • AND igualdad

    AND  shift, and go to state 67

    $default  reduce using rule 28 (exp-bool)


State 84

   20 sent-if: IF PI exp-bool PD THEN • bloque FI
   21        | IF PI exp-bool PD THEN • bloque ELSE bloque FI

    LI  shift, and go to state 20

    bloque  go to state 95


State 85

   30 comb: comb AND igualdad •
   32 igualdad: igualdad • IGU rel
   33         | igualdad • DIS rel

    IGU  shift, and go to state 68
    DIS  shift, and go to state 69

    $default  reduce using rule 30 (comb)


State 86

   32 igualdad: igualdad IGU rel •

    $default  reduce using rule 32 (igualdad)


State 87

   33 igualdad: igualdad DIS rel •

    $default  reduce using rule 33 (igualdad)


State 88

   42 expr: expr MAS term •
   44 term: term • MUL unario
   45     | term • DIV unario

    MUL  shift, and go to state 77
    DIV  shift, and go to state 78

    $default  reduce using rule 42 (expr)


State 89

   41 expr: expr RES term •
   44 term: term • MUL unario
   45     | term • DIV unario

    MUL  shift, and go to state 77
    DIV  shift, and go to state 78

    $default  reduce using rule 41 (expr)


State 90

   35 rel: expr op-rel expr •
   41 expr: expr • RES term
   42     | expr • MAS term

    MAS  shift, and go to state 70
    RES  shift, and go to state 71

    $default  reduce using rule 35 (rel)


State 91

   44 term: term MUL unario •

    $default  reduce using rule 44 (term)


State 92

   45 term: term DIV unario •

    $default  reduce using rule 45 (term)


State 93

   23 sent-do: DO bloque UNTIL PI exp-bool • PD PYC
   28 exp-bool: exp-bool • OR comb

    OR  shift, and go to state 65
    PD  shift, and go to state 96


State 94

   22 sent-while: WHILE PI exp-bool PD bloque •

    $default  reduce using rule 22 (sent-while)


State 95

   20 sent-if: IF PI exp-bool PD THEN bloque • FI
   21        | IF PI exp-bool PD THEN bloque • ELSE bloque FI

    ELSE  shift, and go to state 97
    FI    shift, and go to state 98


State 96

   23 sent-do: DO bloque UNTIL PI exp-bool PD • PYC

    PYC  shift, and go to state 99


State 97

   21 sent-if: IF PI exp-bool PD THEN bloque ELSE • bloque FI

    LI  shift, and go to state 20

    bloque  go to state 100


State 98

   20 sent-if: IF PI exp-bool PD THEN bloque FI •

    $default  reduce using rule 20 (sent-if)


State 99

   23 sent-do: DO bloque UNTIL PI exp-bool PD PYC •

    $default  reduce using rule 23 (sent-do)


State 100

   21 sent-if: IF PI exp-bool PD THEN bloque ELSE bloque • FI

    FI  shift, and go to state 101


State 101

   21 sent-if: IF PI exp-bool PD THEN bloque ELSE bloque FI •

    $default  reduce using rule 21 (sent-if)
